--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-readr
 url = https://cran.r-project.org/src/contrib/readr_1.1.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/tidyverse/readr.git
 
 [autospec]
 # build 32 bit libraries
