--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-readr
-url = https://cran.r-project.org/src/contrib/readr_2.1.4.tar.gz
+url = https://cran.r-project.org/src/contrib/readr_2.1.5.tar.gz
 archives = 
 giturl = https://github.com/tidyverse/readr.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -57,6 +59,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
